<resources>
    <string name="app_name">Tripuddy</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_trips">Trips</string>
    <string name="bottom_nav_notification">Notification</string>
    <string name="bottom_nav_manage_account">Manage Account</string>
    <string name="bottom_nav_homepage">Home</string>
    <string name="unknown">Unknown</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="profile_bio">somethings about me...</string>

    <string name="plan_toggle_1">Incoming</string>
    <string name="plan_toggle_2">Ongoing</string>
    <string name="plan_toggle_3">History</string>
    <string name="search_plan_bar">Search plan</string>
    <string name="sign_in"><i>Let us assist your journey</i></string>
    <string name="account_sign_in">Already have account? Login</string>
    <string name="register_motto"><i>Sign up to start your new Journey</i></string>
    <string name="register">"Haven't signed up?"</string>
    <string name="confirm">"LET'S GO!"</string>
    <string name="create_account">"CREATE ACCOUNT"</string>
    <string name="forget">Forget your password?</string>
    <string name="forget_title">Forget Password?</string>
    <string name="forget_guide">Please validate using your email:</string>
    <string name="log_out">LOGOUT</string>
    <string name="edit_account">EDIT</string>
    <string name="save_account">SAVE</string>

    <string name="channel_name">Tripuddy</string>
    <string name="channel_description">Fast, smart and easy</string>
    <string name="lorem">Bali là một hòn đảo du lịch nổi tiếng bậc nhất của Indonesia, là một trong những nơi thu hút đông du khách nhất ở châu Á. Bali được thiên nhiên ưu đãi những bãi biển xanh, cát trắng, những cánh rừng nhiệt đới xanh ngắt và những thửa ruộng bậc thang ngút ngàn đã trở thành sức hấp dẫn tuyệt vời mà ai ai cũng muốn một lần được đặt chân đến đây.
Bali là một tỉnh của Indonesia, tỉnh này bao gồm đảo chính Bali và một vài đảo nhỏ lân cận, đáng chú ý là Nusa Penida, Nusa Lembongan, và Nusa Ceningan. Bali toạ lạc tại cực tây của quần đảo Sunda nhỏ, nằm giữa Java phía tây và Lombok ở phía đông. Thủ phủ của Bali là Denpasar nằm ở miền nam đảo Bali.
Bali có rất nhiều cái tên như: Đảo thần, Nơi bình minh của thế giới, thiên đường tình yêu hay còn gọi là thiên đường nhiệt đới.
Bali có khí hậu mát mẻ, trong lành và khung cảnh thiên nhiên đẹp như trong tranh. Bali còn sở hữu những khu đền đài với kiến trúc độc đáo như đền Tanah Lot, Uluwatu, Cánh cổng thiên đường tại đền Pura Lempuyang... Ngoài vẻ đẹp thiên nhiên, cùng những ngôi đền thiêng với kiến trúc ấn tượng, Bali còn thu hút du khách bởi những khách sạn sang trọng, khu nghỉ dưỡng cao cấp, những nét văn hóa độc đáo, cùng nền ẩm thực thật sự rất hấp dẫn, tất cả những món ăn đều được chế biến rất tuyệt vời.
Ở đảo Bali cũng có rất nhiều hoạt động vui chơi, giải trí hấp dẫn, thú vị, pha chút phiêu lưu mạo hiểm. Điển hình như trò chơi Bali swing (xích đu) hay chèo thuyền đổ thác là hai loại hình trải nghiệm độc đáo, ấn tượng mà du khách nào cũng phải thử khi đến với hòn đảo “mật ngọt” này.</string>

    <string name="default_plan_name">Plan`s name</string>
    <string name="default_plan_departure_date"> departure date: 01/01/2020</string>

    <string name="material_toolbar_trips_title">Trips</string>
    <string name="material_toolbar_account_info_title">Account Info</string>
    <string name="intro_location_detail">The location on your mind ?</string>
    <string name="description_location_detail">Build, organize, and map out your best trip yet.</string>

    <string name="home_post_list">Recent posts</string>
    <string name="home_favorite_list">Favorite locations</string>
    <string name="home_popular_list">Popular tourist attractions</string>
    <string name="home_empty">Empty</string>

    <string name="friend_tab">Friend</string>
    <string name="chat_tab">Chat</string>
    <string name="map_tab">Map</string>
    <string name="return_tab">Return</string>

    <string name="default_destination_name">Destination</string>
    <string name="detailed_plan_travelers">Travelers</string>
    <string name="default_add_new_destination_title">Add new destination</string>
</resources>