<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_chat"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_48px"
        android:title="@string/chat_tab"/>
    <item
        android:id="@+id/bottom_nav_friend"
        android:enabled="true"
        android:icon="@drawable/ic_manage_accounts_48px"
        android:title="@string/friend_tab"
        />
    <item
        android:id="@+id/bottom_nav_map"
        android:enabled="true"
        android:icon="@drawable/map_icon"
        android:title="@string/map_tab"
        />
    <item
        android:id="@+id/bottom_nav_return"
        android:enabled="true"
        android:icon="@drawable/ic_home_48px"
        android:title="@string/return_tab"
        />
</menu>