<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_homepage"
        android:enabled="true"
        android:icon="@drawable/ic_home_48px"
        android:title="@string/bottom_nav_homepage"
        android:checked="true"
        />
    <item
        android:id="@+id/bottom_nav_trips"
        android:enabled="true"
        android:icon="@drawable/ic_luggage_48px"
        android:title="@string/bottom_nav_trips"/>
    <item
        android:id="@+id/bottom_nav_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_48px"
        android:title="@string/bottom_nav_notification"/>
    <item
        android:id="@+id/bottom_nav_manage_account"
        android:enabled="true"
        android:icon="@drawable/ic_manage_accounts_48px"
        android:title="@string/bottom_nav_manage_account"
        />
</menu>